# Arcanoid

./: .gitignore  CMakeLists.txt  Game.cpp  GameTemplate.vcxproj  GameTemplate.vcxproj.filters
.run/: Arcanoid.run.xml
Components/: Component.h
Components/Collisions/: Collision.h  CubeCollision.cpp  CubeCollision.h  XYLineCollision.cpp  XYLineCollision.h
Components/Meshes/: CircleMesh.cpp  CircleMesh.h  CubeMesh.cpp  CubeMesh.h  Mesh.cpp  Mesh.h  TextMesh.cpp  TextMesh.h  XYLineMesh.cpp  XYLineMesh.h  font.cpp  font.h
Components/Others/: Controller.cpp  Controller.h  Dynamic.cpp  Dynamic.h  Movable.cpp  Movable.h
Entities/: Ball.cpp  Ball.h  Block.cpp  Block.h  Bonus.cpp  Bonus.h  Carriage.cpp  Carriage.h  Entity.cpp  Entity.h  Hud.h  KillZone.h  Scene.h  Wall.cpp  Wall.h
Misc/: Geometry.h  Scrap.cpp  Scrap.h
